[gd_scene load_steps=14 format=2]

[ext_resource path="res://newboss.gd" type="Script" id=1]
[ext_resource path="res://boss1.png" type="Texture" id=2]
[ext_resource path="res://boss1dmg1.png" type="Texture" id=3]
[ext_resource path="res://boss1ded1.png" type="Texture" id=4]
[ext_resource path="res://boss1ded2.png" type="Texture" id=5]
[ext_resource path="res://boss1ded3.png" type="Texture" id=6]
[ext_resource path="res://boss1ded4.png" type="Texture" id=7]
[ext_resource path="res://boss1ded5.png" type="Texture" id=8]
[ext_resource path="res://boss1ded6.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "damaged",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 44.9999, 405.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 68.7723, 68.5155 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="newboss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 0.785397
frames = SubResource( 1 )
animation = "dead"
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.52588e-005 )
rotation = 6.28319
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape2D"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
